# AFL

./: .gitignore  README-HELLO-DATA.md  README.md
.github/workflows/: desktop-win.yml
_upload_stage/: .gitignore  backend_runner.py  requirements.txt
_upload_stage/app/: state.py
_upload_stage/client/src/: App.tsx
_upload_stage/desktop/: package-lock.json  package.json
_upload_stage/desktop/src-tauri/: Cargo.toml  tauri.conf.json
_upload_stage/scripts/: build-and-run-desktop.ps1  build-desktop.ps1  clean-push.ps1
app/: generator.py  main.py  models.py  sim.py
client/: index.html  package-lock.json  package.json
client/src/: api.ts
desktop/src-tauri/src/: main.rs
scripts/: dev-desktop.ps1  dev-web.ps1  make-upload-zip.ps1  quick-push.ps1  reset-rebuild-dev.ps1
