[package]
name = "gridiron-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }
